# jax_new

install/: local_setup.sh  setup.sh
install/jax_bringup/lib/jax_bringup/: initial_pose
install/jax_bringup/share/jax_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/jax_controller/lib/jax_controller/: brain  jax_brain
jax_nano/: jax_arduino.ino
jax_ws/: breathe_test.py  frames_2026-02-04_12.24.18.gv
jax_ws/src/jax_control/: package.xml  setup.cfg  setup.py
jax_ws/src/jax_description/: package.xml
jax_ws/src/jax_hardware/: package.xml  setup.cfg  setup.py
jax_ws/src/jax_hardware_peripherals/: setup.py
jax_ws/src/jax_interfaces/: CMakeLists.txt  package.xml
log/: latest_build
src/jax_bringup/: setup.cfg  setup.py
src/jax_bringup/jax_bringup/: initial_pose.py
src/jax_control/: setup.py
src/jax_control/jax_control/: Command.py  Controller.py  Kinematics.py  StanceController.py  State.py  SwingLegController.py  jax_teleop.py  util.py
src/jax_controller/: package.xml  setup.cfg  setup.py
src/jax_controller/jax_controller/: Config.py  Controller.py  Kinematics.py  State.py
src/jax_description/: CMakeLists.txt  setup.cfg  setup.py
src/jax_description/launch/: display.launch.py
src/jax_description/meshes/: base_link_orig.stl  foot.stl  left_thigh.stl  right_hip.stl  right_thigh.stl
src/jax_description/urdf/: jax.urdf.xacro
src/jax_hardware_peripherals/: setup.cfg
src/jax_hardware_peripherals/jax_hardware_peripherals/: LCD_1inch47.py
src/jax_interfaces/msg/: Angle.msg
(+42 files in other folders)
